src/objects/ISSP_AMC_Files__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom Setting to store links for ACLI Requirement Files</description>
    <fields>
        <fullName>Accounting_Prefix__c</fullName>
        <description>Accouting &amp; Prefix Code Requirement File</description>
        <label>Accounting &amp; Prefix</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Airline_Designator__c</fullName>
        <description>Airline Designator Requirement File</description>
        <label>Airline Designator</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Baggage_Tag_Range_Code__c</fullName>
        <label>Baggage Tag Range Code</label>
        <type>Url</type>
    </fields>
    <label>ISSP AMC Files</label>
</CustomObject>